Bug 477329 - The `Screen Edge` kcm incorrectly highlight a checkbox as `modified` in default settings
Summary: The `Screen Edge` kcm incorrectly highlight a checkbox as `modified` in defau...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwinscreenedges (other bugs)
Version First Reported In: 5.27.9
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-21 12:41 UTC by Jin Liu
Modified: 2023-12-04 15:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
screenshot (352.14 KB, image/png)
2023-11-21 12:41 UTC, Jin Liu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2023-11-21 12:41:37 UTC
Created attachment 163342 [details]
screenshot

SUMMARY
See attachment.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Kernel Version: 6.6.1-arch1-1 (64-bit)
Graphics Platform: offscreen
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 13.5 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Comment 1 Nate Graham 2023-11-27 17:22:45 UTC
In that screenshot, which one is inappropriately highlighted as modified when it shouldn't be?
Comment 2 Nate Graham 2023-11-27 17:23:05 UTC
Ah, the "remain active" one. Can reproduce.
Comment 3 Bug Janitor Service 2023-12-01 21:40:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4739
Comment 4 Nate Graham 2023-12-04 15:07:50 UTC
Git commit e28ec8ada1c84d65d6f0f5ab96c9309f3daf163c by Nate Graham.
Committed on 04/12/2023 at 15:58.
Pushed by ngraham into branch 'master'.

kcms/screenedges: fix defaults indicator for "remain active" checkbox

The initial value was being initialized to true despite the setting
being off by default, and the default checker was highlighting when it
was false, not when it was true.
FIXED-IN: 6.0

M  +1    -1    src/kcms/screenedges/kwinscreenedgeconfigform.cpp
M  +1    -1    src/kcms/screenedges/kwinscreenedgeconfigform.h

https://invent.kde.org/plasma/kwin/-/commit/e28ec8ada1c84d65d6f0f5ab96c9309f3daf163c