fix: fix defaults indicator for "remain active" checkbox

The initial value was being initialized to true despite the setting
being off by default, and the default checker was highlighting when it
was false, not when it was true.

BUG: 477329
FIXED-IN: 6.0