kcms/screenedges/kwinscreenedgeconfigform.cpp
@@ -152,7 +152,7 @@ void KWinScreenEdgesConfigForm::updateDefaultIndicators()
         m_defaultIndicatorVisible && (electricBorderCornerRatio() != m_defaultCornerRatio));
     ui->electricBorderCornerRatioSpin->update();
     ui->remainActiveOnFullscreen->setProperty(
-        "_kde_highlight_neutral", m_defaultIndicatorVisible && remainActiveOnFullscreen() == false);
+        "_kde_highlight_neutral", m_defaultIndicatorVisible && remainActiveOnFullscreen() == true);
     ui->remainActiveOnFullscreen->update();
 }
 
